--- a/public/error.html
+++ b/public/error.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>error/title>
 </head>
 <body>
-    <h1>This is main page</h1>
+    <h1>There is an error</h1>
 </body>
 </html>
