--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>There is an error</h1>
+    <h1>This is main page</h1>
+    <img src="/public/assets/one piece.jpg"\>
+    <img src="/public/assets/naruto.png"\ >
 </body>
 </html>
