--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is main page</h1>
-    <img src="/public/assets/one piece.jpg"\>
-    <img src="/public/assets/naruto.png"\ >
+    <img src="/public/assets/one piece.jpg"/>
+    <img src="/public/assets/naruto.png"/>
 </body>
 </html>
